同步1.21.1侧的更改