@@ -2,8 +2,11 @@ package com.coobird.staticlogistics.logistics.node;
 
 import com.coobird.staticlogistics.api.LogisticsNode;
 import com.coobird.staticlogistics.api.NodeRole;
+import com.coobird.staticlogistics.api.group.GroupConstraints;
 import com.coobird.staticlogistics.api.group.GroupKey;
 import com.coobird.staticlogistics.api.group.GroupRef;
+import com.coobird.staticlogistics.api.type.DistributionStrategy;
+import com.coobird.staticlogistics.api.type.ExtractionMode;
 import com.coobird.staticlogistics.logistics.group.GroupService;
 import com.coobird.staticlogistics.logistics.group.OwnershipMutationPermit;
 import com.coobird.staticlogistics.logistics.node.persistence.ConfigSerializer;
@@ -27,7 +30,6 @@ import java.util.function.Consumer;
  * 管理链接节点集合、全局输入/输出开关、目标缓存和序列化。
  * 这是整个物流系统最核心的数据模型。
  */
-@SuppressWarnings("try")
 public class FaceConfigComposite {
     private static final LinkMutationPermit SNAPSHOT_DECODE_PERMIT = new LinkMutationPermit();
     public static final int MAX_LINKS_PER_FACE = 4_096;
@@ -47,7 +49,6 @@ public class FaceConfigComposite {
     private boolean globalInputEnabled = false;
     private boolean globalOutputEnabled = false;
 
-
     public FaceConfigComposite() {
         this.changeTracker = new AggregateChangeTracker(this::publishChange);
         this.faceConfig = new FaceConfig();
@@ -58,7 +59,7 @@ public class FaceConfigComposite {
     }
 
     /**
-     * 将网络或持久化数据解码到全新的快照，不接触实时节点。
+     * 将网络数据解码到全新的快照对象，不接触任何实时节点配置。
      */
     public static FaceConfigComposite decodeSnapshot(HolderLookup.Provider provider, CompoundTag tag) {
         FaceConfigComposite config = new FaceConfigComposite();
@@ -68,6 +69,7 @@ public class FaceConfigComposite {
 
     /**
      * 以全新解码的聚合快照替换当前全部持久状态。
+     * 该入口专供事务回滚，避免把旧快照增量合并进已经发生修改的对象。
      */
     void restoreSnapshot(Object permit, HolderLookup.Provider provider, CompoundTag tag) {
         FaceConfigComposite snapshot = decodeSnapshot(provider, tag);
@@ -95,28 +97,6 @@ public class FaceConfigComposite {
 
     public BulkEdit beginBulkEdit() {
         return new BulkEdit(changeTracker.begin());
-    }
-
-    @Nullable
-    public ContainerConfig getContainerConfig() {
-        return sharedContainerConfig;
-    }
-
-    /**
-     * 由配置服务绑定同一方块共享的容器级配置。
-     */
-    public void attachContainerConfig(@Nullable ContainerConfig containerConfig) {
-        sharedContainerConfig = containerConfig;
-    }
-
-    /**
-     * 解绑共享容器配置，并同步移除其面索引。
-     */
-    public void detachContainerConfig(FaceAddress address) {
-        if (sharedContainerConfig != null) {
-            sharedContainerConfig.unlinkFace(address);
-            sharedContainerConfig = null;
-        }
     }
 
     public static final class BulkEdit implements AutoCloseable {
@@ -152,14 +132,39 @@ public class FaceConfigComposite {
         faceConfig.setPos(pos);
     }
 
-    public void setOwner(Object permit, java.util.UUID owner, String ownerName,
-                         @Nullable GameProfile profile) {
-        java.util.UUID previousOwner = faceConfig.getOwner();
+    @Nullable
+    public ContainerConfig getContainerConfig() {
+        return sharedContainerConfig;
+    }
+
+    /**
+     * 由配置服务绑定同一方块共享的容器级配置。
+     */
+    public void attachContainerConfig(@Nullable ContainerConfig containerConfig) {
+        sharedContainerConfig = containerConfig;
+    }
+
+    /**
+     * 解绑共享容器配置，并同步移除其面索引。
+     */
+    public void detachContainerConfig(FaceAddress faceKey) {
+        if (sharedContainerConfig != null) {
+            sharedContainerConfig.unlinkFace(faceKey);
+            sharedContainerConfig = null;
+        }
+    }
+
+    public void setOwner(Object permit, UUID owner, String ownerName, @Nullable GameProfile profile) {
+        UUID previousOwner = faceConfig.getOwner();
         if (previousOwner != null || owner == null || linkedNodesByGroup.isEmpty()) {
             faceConfig.setOwner(permit, owner, ownerName, profile);
             return;
         }
-        validateOwnershipClaim();
+        boolean hasForeignScope = linkedNodesByGroup.keySet().stream()
+            .anyMatch(key -> !key.isLegacyUnowned());
+        if (hasForeignScope) {
+            throw new IllegalStateException("Unowned face contains a foreign group scope");
+        }
         Map<GroupKey, LinkedHashSet<LogisticsNode>> claimedScopes = new LinkedHashMap<>();
         linkedNodesByGroup.forEach((key, nodes) -> claimedScopes
             .computeIfAbsent(key.withOwner(owner), ignored -> new LinkedHashSet<>()).addAll(nodes));
@@ -178,8 +183,44 @@ public class FaceConfigComposite {
         faceConfig.addGroup(permit, group);
     }
 
+    public void addLegacyGroup(Object permit, String displayName) {
+        faceConfig.addGroupId(permit, displayName);
+    }
+
+    public void removeGroup(LinkMutationPermit permit, GroupKey groupKey) {
+        faceConfig.removeGroup(permit, groupKey);
+    }
+
     public void renameGroup(LinkMutationPermit permit, GroupKey groupKey, String displayName) {
         faceConfig.renameGroup(permit, groupKey, displayName);
+    }
+
+    /**
+     * 将同一所有者下的来源分组身份及其链接作用域并入目标分组。
+     */
+    public void mergeGroup(LinkMutationPermit permit, GroupRef source, GroupRef target) {
+        if (permit == null) throw new IllegalArgumentException("Link mutation permit is required");
+        if (source == null || target == null) {
+            throw new IllegalArgumentException("Source and target groups are required");
+        }
+        if (!source.key().ownerId().equals(target.key().ownerId())) {
+            throw new IllegalArgumentException("Group merge requires the same owner");
+        }
+        if (source.key().equals(target.key())
+            || !faceConfig.getGroupKeys().contains(source.key())) return;
+
+        try (BulkEdit ignored = beginBulkEdit()) {
+            faceConfig.addGroup(permit, target);
+            faceConfig.renameGroup(permit, target.key(), target.displayName());
+            LinkedHashSet<LogisticsNode> sourceLinks = linkedNodesByGroup.remove(source.key());
+            if (sourceLinks != null && !sourceLinks.isEmpty()) {
+                linkedNodesByGroup
+                    .computeIfAbsent(target.key(), key -> new LinkedHashSet<>())
+                    .addAll(sourceLinks);
+                markDirty();
+            }
+            faceConfig.removeGroup(permit, source.key());
+        }
     }
 
     public boolean canPlayerAccess(Player player) {
@@ -214,15 +255,65 @@ public class FaceConfigComposite {
         }
     }
 
+    /**
+     * 原子迁移面所有者，并保持全部分组内部身份和链接作用域一致。
+     */
+    public void transferOwnership(OwnershipMutationPermit permit, UUID newOwner, String ownerName,
+                                  @Nullable GameProfile profile) {
+        if (permit == null) throw new IllegalArgumentException("Ownership mutation permit is required");
+        UUID previousOwner = faceConfig.getOwner();
+        if (previousOwner == null || newOwner == null) {
+            throw new IllegalStateException("Ownership transfer requires existing and new owners");
+        }
+        if (previousOwner.equals(newOwner)) {
+            faceConfig.setOwner(permit, newOwner, ownerName, profile);
+            return;
+        }
+
+        validateOwnershipTransfer(previousOwner);
+        Map<GroupKey, LinkedHashSet<LogisticsNode>> remapped = new LinkedHashMap<>();
+        for (var scope : linkedNodesByGroup.entrySet()) {
+            GroupKey newKey = scope.getKey().withOwner(newOwner);
+            remapped.computeIfAbsent(newKey, ignored -> new LinkedHashSet<>()).addAll(scope.getValue());
+        }
+
+        try (BulkEdit ignored = beginBulkEdit()) {
+            linkedNodesByGroup.clear();
+            linkedNodesByGroup.putAll(remapped);
+            faceConfig.transferOwnership(newOwner, ownerName, profile);
+        }
+    }
+
+    public void restoreOwnershipSnapshot(OwnershipMutationPermit permit, HolderLookup.Provider provider,
+                                         CompoundTag snapshot) {
+        if (permit == null) throw new IllegalArgumentException("Ownership mutation permit is required");
+        try (BulkEdit ignored = beginBulkEdit()) {
+            faceConfig.resetForOwnershipRestore(permit);
+            deserializeNBT(permit, provider, snapshot);
+            markDirty();
+        }
+    }
+
+    public void validateOwnershipTransfer(UUID expectedOwner) {
+        if (expectedOwner == null || !expectedOwner.equals(faceConfig.getOwner())) {
+            throw new IllegalStateException("Face owner changed before ownership transfer");
+        }
+        boolean invalidScope = linkedNodesByGroup.keySet().stream()
+            .anyMatch(groupKey -> !expectedOwner.equals(groupKey.ownerId()));
+        if (invalidScope) {
+            throw new IllegalStateException("Link scope owner does not match face owner");
+        }
+    }
+
     public Set<LogisticsNode> getLinkedNodes(GroupKey groupKey) {
         Set<LogisticsNode> nodes = linkedNodesByGroup.get(groupKey);
-        return nodes == null ? Set.of() : Set.copyOf(nodes);
+        return nodes == null ? Set.of() : Collections.unmodifiableSet(nodes);
     }
 
     public Map<GroupKey, Set<LogisticsNode>> getLinkedNodesByGroup() {
         Map<GroupKey, Set<LogisticsNode>> result = new LinkedHashMap<>();
-        linkedNodesByGroup.forEach((key, nodes) -> result.put(key, Set.copyOf(nodes)));
-        return Map.copyOf(result);
+        linkedNodesByGroup.forEach((key, value) -> result.put(key, Collections.unmodifiableSet(value)));
+        return Collections.unmodifiableMap(result);
     }
 
     public boolean removeLinkedNode(LinkMutationPermit permit, GroupKey groupKey, LogisticsNode node) {
@@ -235,105 +326,11 @@ public class FaceConfigComposite {
     }
 
     /**
-     * 从所有分组作用域移除指定节点，仅供链接生命周期层使用。
+     * 从所有分组作用域移除指定节点，仅供链接生命周期管理层使用。
      */
     public boolean removeLinkedNode(LinkMutationPermit permit, LogisticsNode node) {
         if (permit == null) throw new IllegalArgumentException("Link mutation permit is required");
         return linkedNodes.remove(node);
-    }
-
-    /**
-     * 仅供链接生命周期层移除分组身份及其作用域。
-     */
-    public void removeGroup(LinkMutationPermit permit, GroupKey groupKey) {
-        if (permit == null) throw new IllegalArgumentException("Link mutation permit is required");
-        linkedNodesByGroup.remove(groupKey);
-        faceConfig.removeGroup(permit, groupKey);
-    }
-
-    /**
-     * 原子迁移面所有者，并同步重映射全部稳定分组作用域。
-     */
-    public void transferOwnership(OwnershipMutationPermit permit, java.util.UUID newOwner,
-                                  String ownerName, @Nullable GameProfile profile) {
-        if (permit == null) throw new IllegalArgumentException("Ownership mutation permit is required");
-        java.util.UUID previousOwner = faceConfig.getOwner();
-        if (previousOwner == null || newOwner == null) {
-            throw new IllegalStateException("Ownership transfer requires existing and new owners");
-        }
-        if (previousOwner.equals(newOwner)) {
-            faceConfig.setOwner(permit, newOwner, ownerName, profile);
-            return;
-        }
-        validateOwnershipTransfer(previousOwner);
-        Map<GroupKey, LinkedHashSet<LogisticsNode>> remapped = new LinkedHashMap<>();
-        for (var scope : linkedNodesByGroup.entrySet()) {
-            GroupKey newKey = scope.getKey().withOwner(newOwner);
-            remapped.computeIfAbsent(newKey, ignored -> new LinkedHashSet<>()).addAll(scope.getValue());
-        }
-        try (BulkEdit ignored = beginBulkEdit()) {
-            linkedNodesByGroup.clear();
-            linkedNodesByGroup.putAll(remapped);
-            faceConfig.transferOwnership(newOwner, ownerName, profile);
-        }
-    }
-
-    public void restoreOwnershipSnapshot(OwnershipMutationPermit permit,
-                                         HolderLookup.Provider provider, CompoundTag snapshot) {
-        if (permit == null) throw new IllegalArgumentException("Ownership mutation permit is required");
-        try (BulkEdit ignored = beginBulkEdit()) {
-            faceConfig.resetForOwnershipRestore(permit);
-            deserializeNBT(permit, provider, snapshot);
-            markDirty();
-        }
-    }
-
-    public void validateOwnershipTransfer(java.util.UUID expectedOwner) {
-        if (expectedOwner == null || !expectedOwner.equals(faceConfig.getOwner())) {
-            throw new IllegalStateException("Face owner changed before ownership transfer");
-        }
-        boolean invalidScope = linkedNodesByGroup.keySet().stream()
-            .anyMatch(groupKey -> !expectedOwner.equals(groupKey.ownerId()));
-        if (invalidScope) {
-            throw new IllegalStateException("Link scope owner does not match face owner");
-        }
-    }
-
-    public void validateOwnershipClaim() {
-        if (faceConfig.getOwner() != null) {
-            throw new IllegalStateException("Ownership claim requires an unowned face");
-        }
-        boolean foreignScope = linkedNodesByGroup.keySet().stream()
-            .anyMatch(key -> !key.isLegacyUnowned());
-        if (foreignScope) {
-            throw new IllegalStateException("Unowned face contains a foreign group scope");
-        }
-    }
-
-    /**
-     * 将同一所有者下的来源分组身份和链接作用域并入目标分组。
-     */
-    public void mergeGroup(LinkMutationPermit permit, GroupRef source, GroupRef target) {
-        if (permit == null) throw new IllegalArgumentException("Link mutation permit is required");
-        if (source == null || target == null) {
-            throw new IllegalArgumentException("Source and target groups are required");
-        }
-        if (!source.key().ownerId().equals(target.key().ownerId())) {
-            throw new IllegalArgumentException("Group merge requires the same owner");
-        }
-        if (source.key().equals(target.key())
-            || !faceConfig.getGroupKeys().contains(source.key())) return;
-        try (BulkEdit ignored = beginBulkEdit()) {
-            faceConfig.addGroup(permit, target);
-            faceConfig.renameGroup(permit, target.key(), target.displayName());
-            LinkedHashSet<LogisticsNode> sourceLinks = linkedNodesByGroup.remove(source.key());
-            if (sourceLinks != null && !sourceLinks.isEmpty()) {
-                linkedNodesByGroup.computeIfAbsent(target.key(), key -> new LinkedHashSet<>())
-                    .addAll(sourceLinks);
-                markDirty();
-            }
-            faceConfig.removeGroup(permit, source.key());
-        }
     }
 
     public boolean isGlobalInputEnabled() {
@@ -341,18 +338,12 @@ public class FaceConfigComposite {
     }
 
     /**
-     * 开启全局输入。首次开启时如果频道未设(0)，自动设到频道1。
-     * 频道=0(禁用)时不受频道过滤约束；设到1以上则按频道过滤已链接节点。
+     * 开启或关闭当前面的全局输入角色。
      */
     public void setGlobalInputEnabled(boolean enabled) {
-        try (BulkEdit ignored = beginBulkEdit()) {
-            if (this.globalInputEnabled != enabled) {
-                this.globalInputEnabled = enabled;
-                markDirty();
-            }
-            if (enabled && linkConfig.getInputChannel() == LinkConfig.UNSPECIFIED_CHANNEL) {
-                linkConfig.setInputChannel(LinkConfig.MIN_CHANNEL);
-            }
+        if (this.globalInputEnabled != enabled) {
+            this.globalInputEnabled = enabled;
+            markDirty();
         }
     }
 
@@ -361,34 +352,20 @@ public class FaceConfigComposite {
     }
 
     /**
-     * 开启全局输出。首次开启时如果频道未设(0)，自动设到频道1。
-     * 频道=0(禁用)时不受频道过滤约束；设到1以上则按频道过滤已链接节点。
+     * 开启或关闭当前面的全局输出角色。
      */
     public void setGlobalOutputEnabled(boolean enabled) {
-        try (BulkEdit ignored = beginBulkEdit()) {
-            if (this.globalOutputEnabled != enabled) {
-                this.globalOutputEnabled = enabled;
-                markDirty();
-            }
-            if (enabled && linkConfig.getOutputChannel() == LinkConfig.UNSPECIFIED_CHANNEL) {
-                linkConfig.setOutputChannel(LinkConfig.MIN_CHANNEL);
-            }
+        if (this.globalOutputEnabled != enabled) {
+            this.globalOutputEnabled = enabled;
+            markDirty();
         }
     }
 
-    public void setInputChannel(int channel) {
-        linkConfig.setInputChannel(channel);
-    }
-
-    public void setOutputChannel(int channel) {
-        linkConfig.setOutputChannel(channel);
-    }
-
-    public void setDistributionStrategy(com.coobird.staticlogistics.api.type.DistributionStrategy strategy) {
+    public void setDistributionStrategy(DistributionStrategy strategy) {
         linkConfig.setStrategy(strategy);
     }
 
-    public void setExtractionMode(com.coobird.staticlogistics.api.type.ExtractionMode mode) {
+    public void setExtractionMode(ExtractionMode mode) {
         linkConfig.setExtractionMode(mode);
     }
 
@@ -443,7 +420,7 @@ public class FaceConfigComposite {
         tag.putBoolean("globalInput", globalInputEnabled);
         tag.putBoolean("globalOutput", globalOutputEnabled);
         if (!linkedNodesByGroup.isEmpty()) {
-            CompoundTag scopesTag = new CompoundTag();
+            CompoundTag scopedTag = new CompoundTag();
             int scopeIndex = 0;
             for (var scope : linkedNodesByGroup.entrySet()) {
                 CompoundTag scopeTag = new CompoundTag();
@@ -453,13 +430,25 @@ public class FaceConfigComposite {
                 int nodeIndex = 0;
                 for (LogisticsNode node : scope.getValue()) {
                     nodesTag.put(String.valueOf(nodeIndex++),
-                        LogisticsNode.CODEC.encodeStart(NbtOps.INSTANCE, node).getOrThrow(false, ignored -> {
-                        }));
+                        LogisticsNode.CODEC.encodeStart(NbtOps.INSTANCE, node)
+                            .getOrThrow(false, message -> {
+                                throw new IllegalStateException(message);
+                            }));
                 }
                 scopeTag.put("nodes", nodesTag);
-                scopesTag.put(String.valueOf(scopeIndex++), scopeTag);
+                scopedTag.put(String.valueOf(scopeIndex++), scopeTag);
             }
-            tag.put("linkedNodesByGroup", scopesTag);
+            tag.put("linkedNodesByGroup", scopedTag);
+        } else if (!linkedNodes.isEmpty()) {
+            CompoundTag nodesTag = new CompoundTag();
+            int i = 0;
+            for (LogisticsNode node : linkedNodes) {
+                nodesTag.put(String.valueOf(i++), LogisticsNode.CODEC.encodeStart(NbtOps.INSTANCE, node)
+                    .getOrThrow(false, message -> {
+                        throw new IllegalStateException(message);
+                    }));
+            }
+            tag.put("linkedNodes", nodesTag);
         }
         return tag;
     }
@@ -473,19 +462,22 @@ public class FaceConfigComposite {
             throw new IllegalArgumentException("Configuration deserialization permit is required");
         }
         CompoundTag migrated = LogisticsDataMigration.migrateFace(nbt);
-        ConfigSerializer.deserializeMigratedNBT(permit, this, p, migrated);
-        if (migrated.contains("version")) version = migrated.getLong("version");
         globalInputEnabled = migrated.getBoolean("globalInput");
         globalOutputEnabled = migrated.getBoolean("globalOutput");
+        ConfigSerializer.deserializeMigratedNBT(permit, this, p, migrated);
+        if (migrated.contains("version")) version = migrated.getLong("version");
         linkedNodesByGroup.clear();
         if (migrated.contains("linkedNodesByGroup")) {
-            CompoundTag scopesTag = migrated.getCompound("linkedNodesByGroup");
+            CompoundTag scopedTag = migrated.getCompound("linkedNodesByGroup");
+            if (scopedTag.getAllKeys().size()
+                > GroupConstraints.MAX_GROUPS_PER_OWNER) {
+                throw new IllegalStateException("Face link scope limit exceeded");
+            }
             int decodedLinks = 0;
-            for (String scopeIndex : scopesTag.getAllKeys()) {
-                CompoundTag scopeTag = scopesTag.getCompound(scopeIndex);
+            for (String scopeIndex : scopedTag.getAllKeys()) {
+                CompoundTag scopeTag = scopedTag.getCompound(scopeIndex);
                 if (!scopeTag.hasUUID("owner") || !scopeTag.hasUUID("internal")) continue;
-                GroupKey groupKey = new GroupKey(
-                    scopeTag.getUUID("owner"), scopeTag.getUUID("internal"));
+                GroupKey groupKey = new GroupKey(scopeTag.getUUID("owner"), scopeTag.getUUID("internal"));
                 if (!faceConfig.getGroupKeys().contains(groupKey)) continue;
                 CompoundTag nodesTag = scopeTag.getCompound("nodes");
                 decodedLinks = Math.addExact(decodedLinks, nodesTag.getAllKeys().size());
@@ -493,11 +485,9 @@ public class FaceConfigComposite {
                     throw new IllegalStateException("Face link limit exceeded");
                 }
                 for (String key : nodesTag.getAllKeys()) {
-                    LogisticsNode.CODEC.parse(NbtOps.INSTANCE, nodesTag.get(key)).resultOrPartial(ignored -> {
-                        })
+                    LogisticsNode.CODEC.parse(NbtOps.INSTANCE, nodesTag.get(key)).result()
                         .ifPresent(node -> linkedNodesByGroup
-                            .computeIfAbsent(groupKey, ignored -> new LinkedHashSet<>())
-                            .add(node));
+                            .computeIfAbsent(groupKey, ignored -> new LinkedHashSet<>()).add(node));
                 }
             }
         } else if (migrated.contains("linkedNodes")) {
@@ -506,9 +496,12 @@ public class FaceConfigComposite {
                 throw new IllegalStateException("Face link limit exceeded");
             }
             for (String key : nodesTag.getAllKeys()) {
-                LogisticsNode.CODEC.parse(NbtOps.INSTANCE, nodesTag.get(key)).resultOrPartial(ignored -> {
-                    })
-                    .ifPresent(this::addLinkedNodeWithoutDirty);
+                LogisticsNode.CODEC.parse(NbtOps.INSTANCE, nodesTag.get(key)).resultOrPartial(err -> {
+                }).ifPresent(node -> {
+                    for (GroupKey groupKey : faceConfig.getGroupKeys()) {
+                        linkedNodesByGroup.computeIfAbsent(groupKey, ignored -> new LinkedHashSet<>()).add(node);
+                    }
+                });
             }
         }
     }
@@ -523,7 +516,7 @@ public class FaceConfigComposite {
         return typeSelectionConfig.getSelectedTypeIds();
     }
 
-    public void setSelectedTypeIds(java.util.Collection<ResourceLocation> ids) {
+    public void setSelectedTypeIds(Collection<ResourceLocation> ids) {
         typeSelectionConfig.setSelectedTypeIds(ids);
     }
 
@@ -552,14 +545,8 @@ public class FaceConfigComposite {
         return typeSelectionConfig.isTypeSelected(type);
     }
 
-    private void addLinkedNodeWithoutDirty(LogisticsNode node) {
-        for (GroupKey groupKey : faceConfig.getGroupKeys()) {
-            linkedNodesByGroup.computeIfAbsent(groupKey, ignored -> new LinkedHashSet<>()).add(node);
-        }
-    }
-
     /**
-     * 汇总所有分组作用域的内部并集视图；对外只暴露只读包装。
+     * 汇总所有分组作用域的内部并集视图。对外只暴露只读包装。
      */
     private final class ScopedUnionSet extends AbstractSet<LogisticsNode> {
         private LinkedHashSet<LogisticsNode> snapshot() {
@@ -595,5 +582,6 @@ public class FaceConfigComposite {
             if (changed) markDirty();
             return changed;
         }
+
     }
 }
